# websight-v2

./: .gitignore  CHANGES.md  DATASET_INFO.md  DATASET_MIGRATION.md  DOWNLOAD_GUIDE.md  DOWNLOAD_SUMMARY.md  HAI_CLUSTER_CHANGES.md  HAI_CLUSTER_GUIDE.md  IMAGE_PATH_FIX.md  IMPLEMENTATION_SUMMARY.md  MERGE_AND_PUSH_GUIDE.md  QUICKSTART.md  RUNNING_ACCURACY_EXAMPLE.md  SCREENSPOT_BENCHMARK.md  SCREENSPOT_COMPLETE.md  SCREENSPOT_QUICKSTART.md  SEPARATE_IMAGES_STORAGE.md  SETUP_SUMMARY.md  TRAINING_FIX.md  TRAINING_OPTIMIZATION.md  TRAINING_README.md  install_flash_attn.sh  main.py  pyproject.toml  requirements-training.txt  screenspot_pro_predictions_openrouter.jsonl  setup.sh  setup_training.sh  test_model.py
agentnet_env/: __init__.py  actions.py  backend.py  config.py  env.py  logging.py  parser.py  replay.py  screen.py
configs/: dataset_info.json  deepspeed_zero2.json  qwen_vl_lora.yaml
data/: wave_ui_test.jsonl  wave_ui_val.jsonl
docs/: MERGE_MODEL_USAGE.md  PLOT_TRAINING_CURVES.md
screenspot_pro/: data.jsonl
scripts/: MERGE_MODEL_README.md  agentnet.py  agentnet_replay.py  benchmark_screenspot_openrouter.py  checkpoint_to_inference.md  download_agentnet.py  download_dataset.py  download_dataset.sh  evaluate_screenspot.py  extract_adapter_from_checkpoint.py  grounding_eval.py  grounding_prompts.py  merge_model.py  plot_training_curves.py  prepare_data.sh  prepare_screenspot_pro.py  run_screenspot_benchmark.py  run_single_inference.py  screenspot_eval.py  screenspot_pro_utils.py  test_screenspot_setup.py  transform_for_training.py  visualize_predictions.py  (+2 more)
(+31 files in other folders)
