[project]
name = "websight-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.0",
    "huggingface-hub>=0.34.4",
    "marimo>=0.15.2",
    "rich>=14.1.0",
    "openai>=1.0.0",  # For OpenRouter API client
    "datasets>=2.16.0",  # For loading ScreenSpot-Pro dataset
    # "pyarrow>=20.0.0",  # Temporarily disabled - only needed for wave_ui.py
]
